--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "color-token-manager",
-  "version": "1.0.0",
-  "description": "Your Figma plugin",
+  "version": "0.3.0",
+  "description": "Figma plugin for creating linked tokens referring to an exist palette",
   "main": "code.js",
   "scripts": {
     "build": "tsc -p tsconfig.json"
