--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "color token manager",
+  "name": "theme color token",
   "id": "1078279010891577195",
   "api": "1.0.0",
   "main": "code.js",
